--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ publishing {
             from components.java
             groupId = 'io.github.mcengine'
             artifactId = 'MCEngineGradlePlugin'
-            version = project.version
+            version = version
         }
     }
     repositories {
